@@ -115,6 +115,7 @@
                 'public/WebAudioDevice.h',
                 'public/WebAutofillClient.h',
                 'public/WebBindings.h',
+                'public/WebBlob.h',
                 'public/WebBlobData.h',
                 'public/WebBlobRegistry.h',
                 'public/WebCache.h',
@@ -438,6 +439,7 @@
                 'src/WebAttribute.cpp',
                 'src/WebAudioBus.cpp',
                 'src/WebBindings.cpp',
+                'src/WebBlob.cpp',
                 'src/WebBlobData.cpp',
                 'src/WebCache.cpp',
                 'src/WebColor.cpp',
